@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Sys-SigAction
-version:            0.12
+version:            0.13
 abstract:           Perl extension for Consistent Signal Handling
 author:
     - Lincoln A. Baxter <lab-at-lincolnbaxter-dot-com>
